aws_infra/front-end/yamlfile/front-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front-nginx-deploy
  name: front-nginx-deploy
  namespace: front-end
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front-nginx-deploy
  template:
    metadata:
      labels:
        app: front-nginx-deploy
    spec:
      containers:
      - image: public.ecr.aws/e6m3e0t8/h1998yc:nginx_v3.4
        name: nginx
        volumeMounts:
        - name: efs-front-storage
          mountPath: /var/www/html/front-end
      volumes:
      - name: efs-front-storage
        persistentVolumeClaim:
          claimName: efs-front-nginx-pvc
